--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "com.github.johnrengelman.shadow" version "4.0.2"
-    id "net.ltgt.apt-eclipse" version "0.18"
     id "net.ltgt.apt-idea" version "0.18"
 }
 
@@ -9,7 +8,7 @@ apply plugin:"application"
 apply plugin:"java"
 
 version "0.1"
-group "br.com.erick"
+group "br.com.erick.revolut"
 
 repositories {
     mavenLocal()
@@ -37,6 +36,17 @@ dependencies {
     testCompile "junit:junit:4.12"
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.hamcrest:hamcrest-all:1.3"
+
+    //Repository
+    compile "javax.persistence:javax.persistence-api"
+    compile "io.micronaut.configuration:micronaut-hibernate-jpa"
+    compile "io.micronaut.configuration:micronaut-jdbc-hikari"
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.13.Final'
+
+    runtime "com.h2database:h2"
+
+    //Repository validation
+//    compile "io.micronaut.configuration:micronaut-hibernate-validator"
 }
 
 shadowJar {
@@ -45,7 +55,7 @@ shadowJar {
 
 run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
 
-mainClassName = "br.com.erick.Application"
+mainClassName = "br.com.erick.revolut.Application"
 tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
     options.compilerArgs.add('-parameters')
