--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "io.spring.dependency-management" version "1.0.6.RELEASE"
+    id "org.joinfaces.dependency-management" version "4.0.3"
     id "com.github.johnrengelman.shadow" version "4.0.2"
     id "net.ltgt.apt-idea" version "0.18"
 }
@@ -43,7 +43,10 @@ dependencies {
     compile "io.micronaut.configuration:micronaut-jdbc-hikari"
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.13.Final'
 
+    compile group: 'io.micronaut.configuration', name: 'micronaut-flyway', version: '1.0.0.RC3'
     runtime "com.h2database:h2"
+
+//    compile "io.swagger.core.v3:swagger-annotations"
 
     //Repository validation
 //    compile "io.micronaut.configuration:micronaut-hibernate-validator"
