--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,12 @@ micronaut:
     application:
         name: revolut
 
-
 datasources:
     default:
-        url: ${JDBC_URL:`jdbc:h2:mem:default;INIT=RUNSCRIPT FROM 'classpath:scripts/create.sql';MODE=MySQL`}
-        username: ${JDBC_USER:sa}
-        password: ${JDBC_PASSWORD:""}
-        driverClassName: ${JDBC_DRIVER:org.h2.Driver}
-
-
+        url: 'jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE'
+        username: 'sa'
+        password: ''
+        driverClassName: 'org.h2.Driver'
 
 jpa:
     default:
@@ -19,6 +16,10 @@ jpa:
         properties:
             hibernate:
                 hbm2ddl:
-                    auto: create
+                    auto: none
                 show_sql: true
 
+flyway:
+    datasources:
+        default:
+            locations: classpath:scripts
