--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,14 @@ dependencies {
     compile "io.micronaut:micronaut-http-server-netty"
     compileOnly "io.micronaut:micronaut-inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
+
+    testCompile "io.micronaut.test:micronaut-test-junit5:1.0.2"
+    testCompile "org.mockito:mockito-junit-jupiter:2.22.0"
     testCompile "junit:junit:4.12"
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.hamcrest:hamcrest-all:1.3"
     testCompile "org.mockito:mockito-core"
+    testCompile "io.micronaut.test:micronaut-test-junit5:1.0.1"
 
     //Repository
     compile "javax.persistence:javax.persistence-api"
@@ -46,11 +50,6 @@ dependencies {
 
     compile group: 'io.micronaut.configuration', name: 'micronaut-flyway', version: '1.0.0.RC3'
     runtime "com.h2database:h2"
-
-//    compile "io.swagger.core.v3:swagger-annotations"
-
-    //Repository validation
-//    compile "io.micronaut.configuration:micronaut-hibernate-validator"
 }
 
 shadowJar {
